<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View_User_Loyalty">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/trykker"
        android:text="@string/upheading"
        android:textColor="#050505"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="381dp"
        android:layout_height="111dp"
        android:layout_marginTop="22dp"
        android:background="#225EBB"
        android:fontFamily="sans-serif"
        android:text="@string/loyaltyH"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="379dp"
        android:layout_height="76dp"
        android:layout_marginTop="25dp"
        android:background="#225EBB"
        android:fontFamily="sans-serif"
        android:text="@string/loyaltyL"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TableLayout
        android:layout_width="398dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17"
        app:layout_constraintVertical_bias="1.0">

        <TableRow>

            <TextView
                android:layout_width="136dp"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_dropdown_dark_frame"
                android:fontFamily="@font/trykker"
                android:gravity="center"
                android:text="@string/loyaltytableH"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="256dp"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_dropdown_dark_frame"
                android:fontFamily="@font/trykker"
                android:gravity="center"
                android:text="@string/loyaltytableH2"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="136dp"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:fontFamily="@font/trykker"
                android:gravity="center"
                android:text="@string/tabler1"
                android:textColor="#333"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="256dp"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:fontFamily="@font/trykker"
                android:gravity="center"
                android:text="@string/tabler1H"
                android:textColor="#333"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="136dp"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:fontFamily="@font/trykker"
                android:gravity="center"
                android:text="@string/tabler2"
                android:textColor="#333"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="256dp"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:fontFamily="@font/trykker"
                android:gravity="center"
                android:text="@string/tabler2H"
                android:textColor="#333"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="136dp"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:fontFamily="@font/trykker"
                android:gravity="center"
                android:text="@string/tabler3"
                android:textColor="#333"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="256dp"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:fontFamily="@font/trykker"
                android:gravity="center"
                android:text="@string/tabler3H"
                android:textColor="#333"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="136dp"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:fontFamily="@font/trykker"
                android:gravity="center"
                android:text="@string/tabler4"
                android:textColor="#333"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="256dp"
                android:layout_height="50dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:fontFamily="@font/trykker"
                android:gravity="center"
                android:text="@string/tabler4H"
                android:textColor="#333"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>