<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".addSubscrip">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="168dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/trykker"
            android:text="@string/lblDPerc"
            android:textAlignment="center"
            android:textColor="#143567"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/etSubdPerc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <EditText
            android:id="@+id/etSubdPerc"
            android:layout_width="191dp"
            android:layout_height="51dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:fontFamily="@font/trykker"
            android:hint="@string/inputHint7"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSubValidity" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/trykker"
            android:text="@string/addSub"
            android:textColor="#143567"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="75dp"
            android:layout_height="31dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="112dp"
            android:fontFamily="@font/trykker"
            android:text="@string/lblName"
            android:textColor="#143567"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/etSubName"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="72dp"
            android:layout_height="31dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="113dp"
            android:fontFamily="@font/trykker"
            android:text="@string/lblPrice"
            android:textColor="#143567"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/etSubPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/etSubName"
            android:layout_width="196dp"
            android:layout_height="42dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:fontFamily="@font/trykker"
            android:hint="@string/inputHint5"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/etSubPrice"
            android:layout_width="174dp"
            android:layout_height="49dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="36dp"
            android:ems="10"
            android:fontFamily="@font/trykker"
            android:hint="@string/inputHint6"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSubName" />

        <Spinner
            android:id="@+id/spinnerSubAvail"
            android:layout_width="177dp"
            android:layout_height="40dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSubdPerc" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="48dp"
            android:fontFamily="@font/trykker"
            android:text="@string/lblAvail"
            android:textColor="#143567"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/spinnerSubAvail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="13dp"
            android:fontFamily="@font/trykker"
            android:text="@string/lblValidPeri"
            android:textColor="#143567"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/etSubValidity"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/trykker"
            android:text="@string/lblmonth"
            android:textColor="#143567"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.136"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/etSubValidity"
            android:layout_width="177dp"
            android:layout_height="46dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="36dp"
            android:ems="10"
            android:fontFamily="@font/trykker"
            android:hint="@string/inputHint7"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSubPrice" />

        <Button
            android:id="@+id/btnAdminAddSub2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="#225EBB"
            android:fontFamily="@font/trykker"
            android:text="@string/btnAdd"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSubAvail" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="165dp"
            android:layout_height="23dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/trykker"
            android:text="@string/lblDPerc2"
            android:textColor="#143567"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <View
            android:id="@+id/divider2"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="37dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAdminAddSub2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>