<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update_User">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Update_Org">

        <EditText
            android:id="@+id/uonumber2"
            android:layout_width="339dp"
            android:layout_height="48dp"
            android:layout_marginTop="184dp"
            android:ems="10"
            android:fontFamily="@font/trykker"
            android:inputType="number"
            android:text="@string/UOnumber"
            android:textColor="#0C0C0C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/uoemail2"
            android:layout_width="339dp"
            android:layout_height="48dp"
            android:layout_marginTop="115dp"
            android:ems="10"
            android:fontFamily="@font/trykker"
            android:inputType="textPersonName"
            android:text="@string/UOemail"
            android:textColor="#0C0C0C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/uoname2"
            android:layout_width="339dp"
            android:layout_height="48dp"
            android:layout_marginTop="46dp"
            android:ems="10"
            android:fontFamily="@font/trykker"
            android:inputType="textPersonName"
            android:text="@string/UOname"
            android:textColor="#0C0C0C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <Button
            android:id="@+id/vbutton3"
            android:layout_width="251dp"
            android:layout_height="47dp"
            android:layout_marginTop="276dp"
            android:backgroundTint="#225EBB"
            android:fontFamily="@font/trykker"
            android:text="@string/updateD"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/trykker"
            android:text="@string/OrgHomeH"
            android:textColor="#050505"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>